[package]
name = "at-stats-ingest"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb2 = "0.4.1"
influxdb2-derive = "0.1.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.17", features = ["json"] }

tokio = {version = "1.28.0", features = ["full"]}
tokio-util = "0.7.8"
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.18"
futures = "0.3.28"
chrono = "0.4.26"