[package]
name = "at-stats-ingest"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb2 = "0.5.0"
influxdb2-derive = "0.1.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11.26", features = ["json"] }

tokio = {version = "1.36.0", features = ["full"]}
tokio-util = "0.7.10"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.21"
futures = "0.3.30"
chrono = "0.4.35"