[package]
name = "at-stats-ingest"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb2 = "0.5.2"
influxdb2-derive = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.14", features = ["json"] }

tokio = {version = "1.44.1", features = ["full"]}
tokio-util = "0.7.14"
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.26"
futures = "0.3.31"
chrono = "0.4.40"